chore: prevents icon flickering

--- a/styles/call-hierarchy.less
+++ b/styles/call-hierarchy.less
@@ -49,6 +49,7 @@ atom-ide-outline-call-hierarchy-item {
     &::before {
       flex-grow: 0;
       flex-shrink: 0;
+      color: mix(@base-background-color, @text-color-subtle);
     }
     > div {
       white-space: nowrap;
@@ -56,12 +57,12 @@ atom-ide-outline-call-hierarchy-item {
       flex-shrink: 0;
     }
   }
+  > .call-hierarchy-exist-child-data > .icon::before {
+    color: @text-color;
+  }
   atom-ide-outline-call-hierarchy-item {
     border-left: 1px solid @background-color-highlight;
     margin-left: 1.2em;
-  }
-  > .call-hierarchy-no-data > .icon::before {
-    color: mix(@base-background-color, @text-color-subtle);
   }
   .detail {
     font-size: 80%;
